# rvfs-sim

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
doc/: architecture.md
rvfs-sim/: Cargo.toml
rvfs-sim-core/: Cargo.toml
rvfs-sim-core/src/: lib.rs  library.rs  opin.rs  sim.rs  wire.rs  wirevalue.rs
